--- a/index.html
+++ b/index.html
@@ -19,7 +19,8 @@
             </div>
         </section>
     </main>
-
+    
+    <script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.4.0/dist/confetti.browser.min.js"></script>
     <script src="script.js"></script>
 </body>
 </html>
