--- a/index.html
+++ b/index.html
@@ -6,20 +6,20 @@
     <link href="https://fonts.googleapis.com/css2?family=Dancing+Script&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Sacramento&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
-    <title>Valentine's Day Question</title> <!-- Added title -->
+    <title>Valentine's Day Question</title>
 </head>
 <body>
     <main id="container">
-        <section id="image-container"></section> <!-- Container for displaying images -->
+        <section id="image-container"></section>
         <section id="text-container">
-            <h1 id="question">Will you be my valentine?</h1> <!-- Changed to h1 for semantic structure -->
+            <h1 id="question">Will you be my valentine?</h1>
             <div id="options">
                 <button id="yes-button" onclick="selectOption('yes')">Yes</button>
                 <button id="no-button" onclick="selectOption('no')">No</button>
             </div>
         </section>
     </main>
-    
+
     <script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.4.0/dist/confetti.browser.min.js"></script>
     <script src="script.js"></script>
 </body>
