--- a/index.html
+++ b/index.html
@@ -3,23 +3,25 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-   \<link href="https://fonts.googleapis.com/css2?family=Great+Vibes&family=Poppins:wght@400;600&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Great+Vibes&family=Poppins:wght@400;600&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
     <title>Valentine's Day Question</title>
 </head>
 <body>
+    <div class="background-effect"></div>
     <main id="container">
-        <section id="image-container"></section>
-        <section id="text-container">
-            <h1 id="question">Will you be my valentine?</h1>
-            <div id="options">
-                <button id="yes-button" onclick="selectOption('yes')">Yes</button>
-                <button id="no-button" onclick="selectOption('no')">No</button>
-            </div>
-        </section>
+        <div class="card">
+            <section id="image-container"></section>
+            <section id="text-container">
+                <h1 id="question">Will you be my valentine?</h1>
+                <div id="options">
+                    <button id="yes-button" onclick="selectOption('yes')">Yes</button>
+                    <button id="no-button" onclick="selectOption('no')">No</button>
+                </div>
+            </section>
+        </div>
     </main>
 
-    <script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.4.0/dist/confetti.browser.min.js"></script>
     <script src="script.js"></script>
 </body>
 </html>
