--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/css2?family=Agency+FB:wght@700&display=swap" rel="stylesheet"> <!-- Added Agency FB font -->
     <link rel="stylesheet" href="style.css">
+    <audio id="valentine-sound" src="love-sound.mp3"></audio>
     <title>Valentine's Day Question</title>
 </head>
 <body>
