--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
     <link href="https://fonts.googleapis.com/css2?family=Agency+FB:wght@700&display=swap" rel="stylesheet"> <!-- Added Agency FB font -->
     <link rel="stylesheet" href="style.css">
     <audio id="valentine-sound" src="love-sound.mp3"></audio>
+    <audio id="yes-sound" src="love-sound.mp3"></audio>
+    <audio id="no-sound" src="uh-oh.mp3"></audio>
+    <audio id="bye-sound" src="byebye.mp3"></audio>
+    <div id="confetti-container"></div>
     <title>Valentine's Day Question</title>
 </head>
 <body>
