--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
     <!-- Audio elements for sound effects -->
     <audio id="love-sound" src="love-sound.mp3"></audio>
     <audio id="no-sound" src="uh-oh.mp3"></audio>
+    <audio id="bye-sound" src="byebye.mp3"></audio> <!-- Added bye sound -->
 
     <script src="script.js"></script>
 </body>
